--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,9 @@
 /src/main.exe
 # execution file of test
 /src/test.exe
+# Input / Output files
+/src/in.txt
+/src/out.txt
 
 # temporary files:
 # _______________
