--- a/.editorconfig
+++ b/.editorconfig
@@ -4,10 +4,10 @@
 root = true
 
 [*]
-indent_style = tab
-indent_size = 4
+indent_style = space
+indent_size = 2
 end_of_line = crlf
 charset = utf-8
 trim_trailing_whitespace = true
 insert_final_newline = true
-tab_width = 4
+tab_width = 2
